# led_flutter_yolo

./: .gitignore
doc/: flutter.md  原型ui.md
led_text/: .metadata  README.md  pubspec.yaml
led_text/.github/workflows/: flutter.yml
led_text/android/: build.gradle
led_text/android/app/: build.gradle
led_text/android/app/src/main/: AndroidManifest.xml
led_text/android/app/src/main/kotlin/com/gakaki/led_text/: MainActivity.kt
led_text/ios/Runner/: Info.plist
led_text/ios/Runner.xcodeproj/: project.pbxproj
led_text/lib/: main.dart
led_text/lib/page/: experiment_list.dart  login_page.dart  webf_page.dart  welcome_page.dart
led_text/lib/widgets/: login_widget.dart  welcome_widget.dart
led_text/linux/: CMakeLists.txt  my_application.cc
led_text/macos/Runner.xcodeproj/: project.pbxproj
led_text/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
led_text/macos/Runner/Configs/: AppInfo.xcconfig
led_text/test/: widget_test.dart
led_text/web/: index.html  manifest.json
led_text/windows/: CMakeLists.txt
led_text/windows/runner/: Runner.rc  main.cpp
python_ftp/: README.md  main.py  pyproject.toml  requirments.txt  rye init testrye
rspack-project/: package.json
rspack_react/: package.json  pnpm-lock.yaml
rspack_react/src/: App.css  App.tsx
salvo-admin/: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
salvo-admin/src/: main.rs
salvo-admin/src/utils/: mongodb.rs  mysql.rs
salvo_admin_me/: Cargo.toml
salvo_admin_me/src/: main.rs
salvo_admin_me/src/fib/: fib.rs
salvo_experiment_lab/: .gitignore  Cargo.toml  README.md  makefile
salvo_experiment_lab/src/: main.rs  main.rs.backup
salvo_experiment_lab/src/controller/: experiments_controller.rs  mod.rs  users_controller.rs
salvo_experiment_lab/src/model/: experment_model.rs  mod.rs  mongo.rs  resp.rs  user_model.rs
salvo_experiment_lab/src/router/: router.rs
salvo_experiment_lab/src/utils/: mod.rs  req.rs  res.rs  time_utils.rs
