[project]
name = "python-ftp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gakaki", email = "gakaki@gmail.com" }
]
dependencies = [
    "flask>=3.0.1",
    "ultralytics>=8.1.8",
    "pyftpdlib>=1.5.9",
    "fastapi>=0.109.0",
    "paddlelabel>=1.0.1",
    "paddleocr>=2.7.0.3",
    "PyMuPDF==1.21.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "python-ftp:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_ftp"]
