[package]
name = "salvo-admin"
version = "0.2.1"
edition = "2021"


[dependencies]
salvo = {version="0.63.1",features=["serve-static","oapi","logging","catch-panic","websocket","session"]}
tokio = { version = "1.35.1", features = ["full"] }

captcha = "0.0.9"
md5 = "0.7.0"
json = "0.12"
serde = {version="1.0.193",features=["derive"]}
serde_json = "^1.0.108"
log = "0.4"
log4rs = "1.0"

jsonwebtoken = "^9.2.0"
rbs = { version = "4.5"}
rbatis = { version = "4.5"}
#rbatis = { version = "4.0",features = ["debug_mode"]}
rbdc-mysql={version="4.5"}

tokio-stream = {version = "0.1.14", features = ["net"]}
futures = "0.3.28"

futures-util = "0.3.30"
once_cell = "1.19.0"
uuid = {version="1.3.2",features=[
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
redis = { version = "0.23.0", features = ["tokio-comp"] }
sysinfo = "0.30.1"
byte-unit = "5.1.2"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0.53"
anyhow = "1.0.78"
mongodb = {version="2.8.0",features=[ "tokio-runtime"]}
