[package]
name = "salvo_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
clap = "3.0"
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
csv = "1.3.0"
matches = { version = "0.1.10", features = [] }
futures = "0.3.28"
mongodb = { version = "2.8.0",features = ["tokio-runtime"] }
thiserror = "1.0.53"
once_cell = "1.19.0"
async-trait = "0.1.76"
tracing-subscriber = "0.3.18"
salvo = {version="0.63.1",features=["serve-static","oapi","logging","catch-panic","websocket","session"]}
captcha = "0.0.9"
md5 = "0.7.0"
jsonwebtoken = "9.2.0"
rbs = { version = "4.5"}
rbatis = { version = "4.5",features = ["debug_mode"]}
rbdc-mysql= { version="4.5" }
tokio-stream = {version = "0.1.14", features = ["net"]}
futures-util = "0.3"
uuid = {version="1.3.2",features=[
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
redis = { version = "0.23.0", features = ["tokio-comp"] }
sysinfo = "0.30.1"
byte-unit = "5.1.2"
tracing = "0.1"
