[package]
name = "app"
version = "0.2.1"
edition = "2021"

[dependencies]
salvo = {version="0.65.1",features=["serve-static","oapi","logging","catch-panic","websocket","session"]}
captcha = "0.0.9"
md5 = "0.7.0"
jsonwebtoken = "8"
serde = {version="1",features=["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = {version = "0.1.14", features = ["net"]}
futures-util = "0.3"
once_cell = "1.19.0"
uuid = {version="1.3.2",features=[
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
redis = { version = "0.23.0", features = ["tokio-comp"] }
sysinfo = "0.30.1"
byte-unit = "5.1.2"
tracing = "0.1"
tracing-subscriber = "0.3"
mongodb = {version="2.8.0",features=[ "tracing-unstable" ,"bson-chrono-0_4" , "tokio-runtime","zstd-compression", "snappy-compression", "zlib-compression" ]}
chrono =  {version="0.4.31",features=[ "serde" ]}
dotenv = "0.15.0"
serde_with = {  version="3.4.0" ,features = ["json"]}
thiserror = { version = "1.0.40", features = [] }
futures = "0.3.30"
bson = { version = "2.9.0", features=[ "chrono-0_4" , "time-0_3","serde_with-3"]}
anyhow = "1.0.79"
async-trait = "0.1.77"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
